# sqlmodel-fastapi

./: database.db  pyproject.toml
sqlmodel_fastapi/: main.py
tests/: test_main.py
