[tool.poetry]
name = "sqlmodel-fastapi"
version = "0.1.0"
description = ""
authors = ["Krekinha <krekmg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlmodel = "^0.0.19"
requests = "^2.32.3"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
ruff = "^0.4.10"

[tool.ruff]
# Defina o comprimento máximo da linha para 79 caracteres
line-length = 79
extend-select = []
extend-exclude = ["migrations"]
ignore = ["F401", "F841", "PLR2004" ]
show-fixes = true

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
run = "fastapi dev sqlmodel_fastapi/main.py"
test = "pytest -vv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
